Microsoft Charity Event Project/Kubernetes/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: charity-front
  name: charity-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: charity-front
  template:
    metadata:
      labels:
        app: charity-front
    spec:
      containers:
      - name: charity-front
        image: waterzss0508/charity:frontend-img
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      restartPolicy: Always
      # lifeCycle:
      #   preStop:
      #     exec:
      #       command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: charity-front
  labels:
    run: charity-front
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: charity-front
