Microsoft Charity Event Project/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-back
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  defaultBackend:
    service:
      name: charity-front
      port:
          number: 80
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: charity-backend
            port: 
              number: 4480
